Enhance Docker best practices XML with comprehensive improvements
Based on review of other system prompt documents, implemented:

- Expanded goal section with 10 detailed principles following established patterns
- Added context section explaining modern Java containerization challenges
- Enhanced constraints with BLOCKING conditions and critical safety measures
- Improved example descriptions with CDATA blocks and detailed explanations
- Fixed XML entity encoding issues (& -> &amp;) for proper schema validation
- Updated markdown file in .cursor/rules/ directory
- Restored Java 25 configuration across all projects

The XML now follows the established PML schema patterns and provides
more comprehensive guidance for Java 25 Docker containerization.