@@ -1,271 +1,447 @@
-Docker Best Practices for Java 25 Applications
-    
-        Comprehensive guidelines for containerizing Java 25 applications using Docker, focusing on performance optimization, security enhancements, and efficient resource utilization.
-    
-    
-    
-        
-            Use Appropriate Base Images
-            
-                Select the most suitable base image for your Java 25 application, considering size, security, and compatibility requirements.
-            
-            
-                Use `eclipse-temurin:25-jre-alpine` for minimal production images
-                Use `eclipse-temurin:25-jdk-alpine` only when JDK tools are required at runtime
-                Prefer Alpine Linux variants for smaller image sizes
-                Use specific version tags instead of `latest` for reproducible builds
-            
-            
-### Example : 
+---
+author: Juan Antonio Breña Moral
+version: 0.11.0-SNAPSHOT
+---
+# Docker Best Practices for Java 25 Applications
 
-Title: 
-Description: 
+## Role
 
-        
+You are a Senior DevOps Engineer and Java Developer with extensive experience in containerizing Java applications using Docker, with specific expertise in Java 25 features and container optimization.
 
-        
-            Implement Multi-Stage Builds
-            
-                Separate the build environment from the runtime environment to create lean, secure final images by excluding unnecessary build tools and dependencies.
-            
-            
-                Use a build stage with JDK for compilation
-                Use a runtime stage with JRE for execution
-                Copy only necessary artifacts between stages
-                Minimize the number of layers in the final image
-            
-            
-### Example : 
+## Goal
 
-Title: 
-Description: 
+Provide comprehensive guidance for containerizing Java 25 applications using Docker best practices. Focus on creating efficient, secure, and maintainable Docker containers that leverage Java 25's latest features including Virtual Threads, improved container awareness, and modern JVM optimizations.
 
-        
+### Key Areas Covered:
+- **Multi-stage builds** for optimal image size and security
+- **Java 25 specific optimizations** including Virtual Threads and container-aware JVM settings
+- **Security hardening** with non-root users and minimal attack surface
+- **Performance tuning** for containerized Java applications
+- **Development workflow** optimization for faster iteration
+- **Production deployment** best practices
+- **Monitoring and observability** integration
 
-        
-            Optimize JVM Configuration for Containers
-            
-                Configure the JVM to work efficiently within container resource constraints, taking advantage of Java 25's container awareness features.
-            
-            
-                Use `-XX:+UseContainerSupport` to enable container awareness (enabled by default in Java 25)
-                Set appropriate heap size using `-Xms` and `-Xmx` based on container memory limits
-                Use `-XX:+UseG1GC` for better performance in containerized environments
-                Enable JVM ergonomics with `-XX:+UnlockExperimentalVMOptions` for Java 25 features
-                Use `-XX:+ExitOnOutOfMemoryError` to ensure container restart on OOM
-            
-            
-### Example : 
 
-Title: 
-Description: 
+## Constraints
 
-        
+Before applying Docker containerization, ensure the Java application builds successfully and follows Java 25 best practices.
 
-        
-            Implement Security Best Practices
-            
-                Enhance container security by following the principle of least privilege and implementing defense-in-depth strategies.
-            
-            
-                Create and use a non-root user for running the application
-                Use read-only root filesystem when possible
-                Minimize the attack surface by removing unnecessary packages
-                Scan images for vulnerabilities regularly
-                Use secrets management for sensitive data
-            
-            
-### Example : 
+- **MANDATORY**: Verify the application builds with `./mvnw clean package` before containerization
+- **VERIFY**: Ensure Java 25 is properly configured in the project's pom.xml
+- **SECURITY**: Always use non-root users in production Docker images
+- **PERFORMANCE**: Configure JVM for container-aware memory management
+- **SAFETY**: Test Docker images locally before pushing to registries
 
-Title: 
-Description: 
+## Examples
 
-        
+### Table of contents
 
-        
-            Optimize Image Layers and Caching
-            
-                Structure Dockerfile commands to maximize Docker layer caching and minimize image size.
-            
-            
-                Order commands from least to most frequently changing
-                Copy dependency files before source code to leverage cache
-                Combine related RUN commands to reduce layers
-                Use `.dockerignore` to exclude unnecessary files
-                Clean up package caches and temporary files in the same layer
-            
-            
-### Example : 
+- Example 1: Multi-Stage Dockerfile for Java 25 Applications
+- Example 2: Java 25 JVM Configuration for Containers
+- Example 3: Security Hardening for Docker Images
+- Example 4: Development-Optimized Docker Configuration
+- Example 5: Docker Compose for Complete Development Environment
+- Example 6: Production-Ready Docker Configuration
 
-Title: 
-Description: 
+### Example 1: Multi-Stage Dockerfile for Java 25 Applications
 
-        
+Title: Optimize build and runtime environments separately
+Description: Create efficient Docker images using multi-stage builds that separate the build environment from the runtime environment, leveraging Java 25 features.
 
-        
-            Configure Health Checks and Monitoring
-            
-                Implement comprehensive health checking and monitoring to ensure application reliability and observability.
-            
-            
-                Define Docker health checks for container orchestration
-                Implement application health endpoints
-                Configure proper logging to stdout/stderr
-                Use structured logging formats (JSON) for better parsing
-                Include JVM metrics and garbage collection monitoring
-            
-            
-### Example : 
+**Good example:**
 
-Title: 
-Description: 
+```dockerfile
+# Multi-stage build for Java 25 application
+# Build stage
+FROM eclipse-temurin:25-jdk-alpine AS build
+WORKDIR /app
 
-        
+# Copy dependency files first for better caching
+COPY pom.xml .
+COPY mvnw .
+COPY .mvn ./.mvn
 
-        
-            Manage Configuration and Secrets
-            
-                Externalize configuration and handle secrets securely to support different deployment environments.
-            
-            
-                Use environment variables for configuration
-                Support configuration files mounted as volumes
-                Never embed secrets in Docker images
-                Use Docker secrets or external secret management
-                Implement configuration validation at startup
-            
-            
-### Example : 
+# Download dependencies (cached layer)
+RUN ./mvnw dependency:resolve
 
-Title: 
-Description: 
+# Copy source code and build
+COPY src ./src
+RUN ./mvnw clean package -DskipTests && \
+    rm -rf ~/.m2/repository && \
+    rm -rf target/classes target/generated-sources
 
-        
+# Runtime stage
+FROM eclipse-temurin:25-jre-alpine
+WORKDIR /app
 
-        
-            Optimize for Different Deployment Scenarios
-            
-                Create flexible Docker configurations that work well across development, testing, and production environments.
-            
-            
-                Use build arguments for environment-specific customization
-                Support both standalone and orchestrated deployments
-                Implement graceful shutdown handling
-                Configure appropriate resource limits and requests
-                Use init systems for proper signal handling in containers
-            
-            
-### Example : 
+# Create non-root user
+RUN adduser --disabled-password --gecos "" --uid 1001 appuser
 
-Title: 
-Description: 
+# Copy application JAR
+COPY --from=build --chown=appuser:appuser /app/target/*.jar app.jar
 
-        
+# Switch to non-root user
+USER appuser
 
-        
-            Leverage Java 25 Specific Features
-            
-                Take advantage of Java 25's latest features and improvements for better container performance and developer experience.
-            
-            
-                Use Virtual Threads for improved scalability in I/O-intensive applications
-                Leverage Pattern Matching and Switch Expressions for cleaner code
-                Use Record Classes for data transfer objects
-                Take advantage of improved garbage collection algorithms
-                Use Text Blocks for embedded configuration or SQL
-            
-            
-### Example : 
+# Configure JVM for containers and Java 25
+ENV JAVA_OPTS="-Xms512m -Xmx1024m -XX:+UseG1GC -XX:+UseContainerSupport -XX:+ExitOnOutOfMemoryError"
 
-Title: 
-Description: 
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
+    CMD curl -f http://localhost:8080/actuator/health || exit 1
 
-        
+EXPOSE 8080
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
 
-        
-            Implement Efficient Development Workflow
-            
-                Create Docker configurations that support efficient development cycles and debugging capabilities.
-            
-            
-                Use Docker Compose for local development environments
-                Implement hot-reload capabilities for development
-                Support remote debugging configurations
-                Create separate profiles for development and production
-                Use volume mounts for rapid iteration during development
-            
-            
-### Example : 
+```
 
-Title: 
-Description: 
+**Bad example:**
 
-        
-    
+```dockerfile
+# Bad: Single stage with unnecessary build tools in production
+FROM eclipse-temurin:25-jdk-alpine
+WORKDIR /app
 
-    
-        
-            Using Root User in Production
-            Running applications as root user increases security risks
-            
-### Example : 
+# Bad: Running as root user
+COPY . .
+RUN ./mvnw clean package
 
-Title: 
-Description: 
+# Bad: No JVM optimization for containers
+# Bad: No health checks
+EXPOSE 8080
+CMD ["java", "-jar", "target/*.jar"]
 
-        
-        
-        
-            Installing Unnecessary Packages
-            Including development tools and unnecessary packages in production images
-            
-### Example : 
+```
 
-Title: 
-Description: 
+### Example 2: Java 25 JVM Configuration for Containers
 
-        
-        
-        
-            Hardcoding Configuration
-            Embedding environment-specific configuration in Docker images
-            
-### Example : 
+Title: Optimize JVM settings for containerized environments
+Description: Configure the JVM to work efficiently within container resource constraints, taking advantage of Java 25's container awareness and Virtual Threads.
 
-Title: 
-Description: 
+**Good example:**
 
-        
-        
-        
-            Ignoring JVM Container Settings
-            Not configuring JVM for container resource limits
-            
-### Example : 
+```dockerfile
+# Java 25 optimized JVM configuration
+ENV JAVA_OPTS="\
+    -Xms512m \
+    -Xmx1024m \
+    -XX:+UseG1GC \
+    -XX:+UseContainerSupport \
+    -XX:+ExitOnOutOfMemoryError \
+    -XX:+UnlockExperimentalVMOptions \
+    -Djdk.virtualThreadScheduler.parallelism=1 \
+    -XX:+PrintGCDetails \
+    -XX:+PrintGCTimeStamps \
+    -Dfile.encoding=UTF-8"
 
-Title: 
-Description: 
+# Application-specific configuration
+ENV SPRING_PROFILES_ACTIVE=production
+ENV SERVER_PORT=8080
+ENV MANAGEMENT_PORT=9090
 
-        
-        
-        
-            Using Latest Tags in Production
-            Using unstable or latest tags for base images in production
-            
-### Example : 
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
 
-Title: 
-Description: 
+```
 
-        
-    
+**Bad example:**
 
-    
-        Use multi-stage builds with appropriate base images
-        Configure JVM for container environments
-        Implement security best practices with non-root users
-        Optimize Docker layers and caching strategies
-        Configure comprehensive health checks and monitoring
-        Externalize configuration and manage secrets properly
-        Leverage Java 25 specific features and improvements
-        Support efficient development workflows
+```dockerfile
+# Bad: Fixed heap size without considering container limits
+ENV JAVA_OPTS="-Xmx4g"
+
+# Bad: No container awareness
+# Bad: No Virtual Threads optimization
+CMD ["java", "-Xmx4g", "-jar", "app.jar"]
+
+```
+
+### Example 3: Security Hardening for Docker Images
+
+Title: Implement security best practices for production containers
+Description: Enhance container security by following the principle of least privilege and implementing defense-in-depth strategies.
+
+**Good example:**
+
+```dockerfile
+# Security-hardened Dockerfile
+FROM eclipse-temurin:25-jre-alpine
+
+# Update base image and install minimal required packages
+RUN apk update && apk upgrade && \
+    apk add --no-cache curl tini && \
+    rm -rf /var/cache/apk/*
+
+# Create non-root user with specific UID
+RUN adduser --disabled-password --gecos "" --uid 1001 appuser
+
+WORKDIR /app
+
+# Copy application with proper ownership
+COPY --chown=appuser:appuser app.jar .
+
+# Use read-only root filesystem (add volumes for writable areas)
+VOLUME ["/tmp", "/app/logs"]
+
+# Switch to non-root user
+USER appuser
+
+# Use tini for proper signal handling
+ENTRYPOINT ["tini", "--"]
+CMD ["java", "-jar", "app.jar"]
+
+# Security labels
+LABEL security.non-root=true
+LABEL security.read-only=true
+
+```
+
+**Bad example:**
+
+```dockerfile
+# Bad: Running as root
+FROM eclipse-temurin:25-jre-alpine
+WORKDIR /app
+COPY app.jar .
+
+# Bad: No security hardening
+# Bad: No signal handling
+CMD ["java", "-jar", "app.jar"]
+
+```
+
+### Example 4: Development-Optimized Docker Configuration
+
+Title: Enable efficient development workflows with hot-reload and debugging
+Description: Create Docker configurations that support efficient development cycles with hot-reload capabilities and remote debugging for Java 25 applications.
+
+**Good example:**
+
+```dockerfile
+# Development Dockerfile
+FROM eclipse-temurin:25-jdk-alpine AS development
+
+WORKDIR /app
+
+# Install development tools
+RUN apk add --no-cache curl
+
+# Copy Maven wrapper and dependencies
+COPY pom.xml mvnw ./
+COPY .mvn ./.mvn
+RUN ./mvnw dependency:resolve
+
+# Create volumes for source code and target
+VOLUME ["/app/src", "/app/target"]
+
+# Enable remote debugging
+ENV JAVA_DEBUG_OPTS="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
+ENV JAVA_OPTS="$JAVA_DEBUG_OPTS -XX:+UseG1GC"
+
+# Expose application and debug ports
+EXPOSE 8080 5005
+
+# Use Spring Boot DevTools for hot reload
+CMD ["./mvnw", "spring-boot:run", "-Dspring-boot.run.jvmArguments='$JAVA_OPTS'"]
+
+```
+
+**Bad example:**
+
+```dockerfile
+# Bad: No development optimizations
+FROM eclipse-temurin:25-jdk-alpine
+COPY . .
+RUN ./mvnw package
+CMD ["java", "-jar", "target/*.jar"]
+
+```
+
+### Example 5: Docker Compose for Complete Development Environment
+
+Title: Orchestrate application with dependencies using Docker Compose
+Description: Set up a complete development environment using Docker Compose that includes the Java 25 application, database, and monitoring tools.
+
+**Good example:**
+
+```yaml
+# docker-compose.yml for development
+version: '3.8'
+
+services:
+  app:
+    build:
+      context: .
+      target: development
+    ports:
+      - "8080:8080"
+      - "5005:5005"  # Debug port
+    volumes:
+      - ./src:/app/src
+      - ./target:/app/target
+      - maven-cache:/root/.m2
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/myapp
+    depends_on:
+      - db
+      - redis
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  db:
+    image: postgres:15-alpine
+    environment:
+      - POSTGRES_DB=myapp
+      - POSTGRES_USER=dev
+      - POSTGRES_PASSWORD=dev
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+
+volumes:
+  maven-cache:
+  postgres-data:
+
+```
+
+**Bad example:**
+
+```yaml
+# Bad: Minimal compose without proper configuration
+version: '3.8'
+services:
+  app:
+    build: .
+    ports:
+      - "8080:8080"
+  # Missing database, monitoring, health checks
+
+```
+
+### Example 6: Production-Ready Docker Configuration
+
+Title: Configure containers for production deployment with monitoring and scaling
+Description: Create production-ready Docker configurations with proper resource limits, monitoring, and scaling capabilities for Java 25 applications.
+
+**Good example:**
+
+```yaml
+# kubernetes deployment example
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: java25-app
+  labels:
+    app: java25-app
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: java25-app
+  template:
+    metadata:
+      labels:
+        app: java25-app
+    spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1001
+        fsGroup: 1001
+      containers:
+      - name: app
+        image: myregistry/java25-app:latest
+        ports:
+        - containerPort: 8080
+        - containerPort: 9090  # Management port
+        env:
+        - name: JAVA_OPTS
+          value: "-Xms512m -Xmx1024m -XX:+UseG1GC -XX:+UseContainerSupport"
+        - name: SPRING_PROFILES_ACTIVE
+          value: "production"
+        resources:
+          limits:
+            memory: "1.5Gi"
+            cpu: "1000m"
+          requests:
+            memory: "512Mi"
+            cpu: "500m"
+        livenessProbe:
+          httpGet:
+            path: /actuator/health/liveness
+            port: 9090
+          initialDelaySeconds: 60
+          periodSeconds: 30
+        readinessProbe:
+          httpGet:
+            path: /actuator/health/readiness
+            port: 9090
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        volumeMounts:
+        - name: app-config
+          mountPath: /app/config
+          readOnly: true
+      volumes:
+      - name: app-config
+        configMap:
+          name: java25-app-config
+
+```
+
+**Bad example:**
+
+```yaml
+# Bad: No resource limits or health checks
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: java25-app
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: java25-app
+  template:
+    spec:
+      containers:
+      - name: app
+        image: java25-app:latest
+        ports:
+        - containerPort: 8080
+
+```
+## Output Format
+
+- Provide complete Dockerfile examples with explanatory comments
+- Include Docker Compose configurations when applicable
+- Show both development and production configurations
+- Explain Java 25 specific optimizations and their benefits
+- Include security considerations and hardening steps
+- Provide monitoring and observability configurations
+
+## Safeguards
+
+- Always verify the Java application builds successfully before containerization
+- Test Docker images locally before pushing to registries
+- Scan images for security vulnerabilities using tools like Trivy or Snyk
+- Never include sensitive information like passwords or API keys in Docker images
+- Use specific version tags instead of 'latest' for base images in production
+- Implement proper resource limits to prevent resource exhaustion
+- Configure health checks for all production deployments
+- Use read-only root filesystems when possible for enhanced security
